<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewmodel" type="com.famian.githubapp.ui.user.UserDetailsViewModel"/>
    </data>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.user.UserDetailsFragment">
        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:layout_gravity="center" android:id="@+id/loading"
                     android:indeterminate="true"
        />

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/content_main">
            <ImageView android:layout_width="150dp" android:layout_height="150dp"
                       app:layout_constraintStart_toStartOf="@+id/guideline5"
                       android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                       app:layout_constraintTop_toTopOf="parent"
                       android:id="@+id/imageView"/>
            <TextView
                    android:text="@{viewmodel.userName}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewUserName"
                    tools:text=" dsdsdads   asdasd   dasdasda   asdasdsd "
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    android:textAlignment="center" app:layout_constraintBottom_toBottomOf="@+id/imageView"/>
            <TextView
                    android:text="@{viewmodel.userDetails}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:id="@+id/textViewUserDescription"
                    tools:text="dasdsafdsssssssssssssssssssfsdfsfds"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/guideline5" android:layout_marginTop="24dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/textViewLocation"
                      tools:text="@string/LOCATION"
                      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                      android:text="@{@string/LOCATION(viewmodel.userLocation)}"
                      app:layout_constraintTop_toBottomOf="@+id/textViewUserDescription"
                      app:layout_constraintStart_toStartOf="@+id/guideline5" android:layout_marginStart="8dp"
                      android:layout_marginTop="24dp"/>


            <Button
                    android:text="Followers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonGoSearch" android:layout_marginBottom="16dp"
                    android:onClick="@{()->viewmodel.followersClick()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/buttonRepos"
                    app:layout_constraintHorizontal_chainStyle="spread" android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textViewRepos"/>
            <Button
                    android:text="Repositories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewmodel.reposClick()}"
                    android:id="@+id/buttonRepos" android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonGoSearch"
                    app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toBottomOf="@+id/textViewRepos"/>
            <TextView
                    android:text="@{@string/COMPANY(viewmodel.userCompany)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCompany"
                    tools:text="@string/COMPANY" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLocation"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginStart="8dp"/>
            <androidx.constraintlayout.widget.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline4" app:layout_constraintGuide_percent="0.6"/>
            <androidx.constraintlayout.widget.Guideline
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline5" app:layout_constraintGuide_percent="0.05"/>
            <androidx.constraintlayout.widget.Guideline
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline6" app:layout_constraintGuide_percent="0.95"/>
            <TextView
                    android:text="@string/FOLLOWERS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewFollowers"
                    tools:text="@{@string/FOLLOWERS(viewmodel.userFollowers)}"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCompany"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@{@string/FOLLOWING(viewmodel.userFollowing)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewFollowing"
                    tools:text="@string/FOLLOWING"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/textViewFollowers"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@{@string/REPOSITORIES(viewmodel.userRepos)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewRepos"
                    android:layout_marginTop="16dp"
                    tools:text="@string/REPOSITORIES"
                    app:layout_constraintTop_toBottomOf="@+id/textViewFollowing"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginStart="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
